# sme-finance-application-schema

./: .gitignore  .travis.yml  LICENSE  README.md  examples.py  finance_application_v1  lender_v3  requirementsTest.txt  setup.cfg  setup.py  sme_contact_v2  sme_v3  test.py
sme_finance_application_schema/: actor_v1  address_v1  aggregated_actors_v1  batch_application_v1  batch_response_v1  entity_v1  examples.py  finance_application_response_v1  finance_application_v1  finance_application_v2  finance_application_v3  finance_need_v1  lender_v3  lender_v4  person_v1  reporting_stage_1_v1  reporting_stage_2_v1  reporting_stage_3_v1  reporting_stage_4_v1  reporting_stage_5_v1  reporting_v1  sme_contact_v2  sme_contact_v3  sme_v3  sme_v4  sme_v5  test.py  translations.py  unreferral_request_v1
sme_finance_application_schema/tests/: fixtures.py  test.py
