[metadata]
name = sme_finance_application_schema
version = 1.0
description = Schemas to facilitate industry implementation of the Government referral scheme
author = Funding Options
author-email = techsupport@fundingoptions.com
url = https://github.com/FundingOptions/sme-finance-application-schema
license = CC BY 4.0

[options]
zip_safe = true
packages = find:
include_package_data = true
tests_require = jsonschema[format]==2.6.0

[options.package_data]
sme_finance_application_schema = *

[bdist_wheel]
universal = 1
